# doc-grader

./: .env.example  .gitignore  INSTALL.md  README.md  environment-lock.yml  environment.yml  projekt.tex  pyproject.toml  requirements-lock.txt  requirements.txt  xcsirim00-A-tool-for-assistance-with-student-projects-assessment-01-kapitoly-chapters-en.tex  xcsirim00-A-tool-for-assistance-with-student-projects-assessment.tex  xcsirim00.tex
bib-styles/Pysny/: skplain.bst
config/: configs.md  default.json  grammar.json  ifj2425.json  integrity.json  ipp2425_int.json  ipp2425_par.json  ipp2526.json  llm.json  none.json  rulebook.json  rulebook2425_int.json  rulebook2425_par.json  rulebook_ifj.json  rulebook_ipp2526.json  severity_weights.json  text_demo.json  vision.json
config/experiments/: generic_classifier_fallback.json  grammar_only.json  integrity.json  local_only.json  no_judge_baseline.json  parse_only.json  smoke.json
config/presets/: ifj_2024_25.json  ipp_2024_25_int.json  ipp_2024_25_par.json  ipp_2025_26.json
config/rulebooks/: ifj_2024_25.json  ipp_2024_25_int.json  ipp_2024_25_par.json
config/weights/: severity_weights.json
data/: legacy_codebook.md
deprecated/: md_parser.py  normalizer.py  pdf_parser.py
deprecated/detectors/: base_detector.py  caption_analyzer.py  document_info_extractor.py  language_analyzer.py  length_analyzer.py  metadata_extractor.py  section_analyzer.py  structure_analyzer.py  typography_analyzer.py
doc_grader/: __init__.py  __main__.py  document_parser.py  llm_client.py  parser.py  rule_engine.py  scorer.py  utils.py
doc_grader/analysers/: asset_analyser.py  base_analyser.py  content_analyser.py  grammar_analyser.py  integrity_analyser.py  language_analyser.py  structure_analyser.py
doc_grader/parsers/: parser.py
doc_grader/schemas/: base.py  config.py  document.py  finding.py  ir.py  llm.py
doc_grader/ui/: app.py  data.py  document_panel.py  findings_panel.py  ui_utils.py
docs/: assessment_criteria.md  overview.md  rubric_codes.md  rubric_codes_map.md  spec.md
notebooks/: analysis.py  baduml_pre-processing.ipynb  data_analysis.py  dataset_parser.py  evaluation.ipynb  extract_baduml.py  ipp_doc_data_analysis.ipynb  notebook.ipynb  run_sample_gold.ipynb  severity_weights_analysis.ipynb  train.py
notebooks/baduml/: extract_images.py  format_finetune.py  models.py  process_audit.py  submit_audit.py
notebooks/scripts/: __init__.py  analysis.py  compute_severity_weights.py  constants.py  data_analysis.py  dataset_analysis.py  dataset_parser.py  eval.py  eval_analysis.py  evaluate_gold.py  train.py  visual_utils.py
notebooks/vision/: extractor.py  formatter.py  splitter.py
research/: q3_diagrams.md  q4_languages.md  q8_representation.md  research_plan.md  research_questions.md
research/sources/: sources.md
scripts/: fix_md.sh
src/: __main__.py  llm_client.py  logger.py  rule_engine.py  util.py  utils.py
src/analysers/: asset_analyser.py  base_analyser.py  content_analyser.py  design_analyser.py  grammar_analyser.py  integrity_analyser.py  language_analyser.py  section_analyser.py  structure_analyser.py  style_analyser.py  text_analyser.py
src/detectors/: base_detector.py  caption_analyzer.py  document_info_extractor.py  language_analyzer.py  length_analyzer.py  length_detector.py  metadata_extractor.py  section_analyzer.py  structure_analyzer.py  typography_analyzer.py
src/parsers/: __init__.py  docling_parser.py  md_parser.py  normalizer.py  (+1 more)
thesis/: Makefile  README-overleaf-git-guide.md  projekt.tex  xcsirim00-01-kapitoly-chapters-en.tex  xcsirim00-30-prilohy-appendices-en.tex  xcsirim00-A-tool-for-assistance-with-student-projects-assessment.tex  xcsirim00.tex
(+48 files in other folders)
