[project]
name = "doc-grader"
version = "1.0"
description = "A tool to assist with grading student project documentation for the IFJ & IPP courses at BUT FIT."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cairosvg",
    "charset-normalizer",
    "docling",
    "langdetect",
    "language-tool-python",
    "marko",
    "markdown-it-py",
    "nh3",
    "pymarkdownlnt",
    "numpy",
    "openai",
    "pandas",
    "pillow",
    "pydantic>=2.0",
    "python-dotenv",
    "rich",
    "scikit-learn",
    "sentence-transformers",
    "stanza",
    "streamlit",
    "streamlit-local-storage",
    "streamlit-pdf-viewer",
]

[project.scripts]
doc-grader = "doc_grader.__main__:main"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "I",    # isort
    "FA",   # flake8-future-annotations
    "TC",   # flake8-type-checking
    "PTH",  # Pathlib
    "RUF",  # Ruff
]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.packages.find]
where = ["."]
include = ["doc_grader*"]
namespaces = true

[project.optional-dependencies]
dev = [
    "build",
    "ipykernel",
    "jupyter",
    "matplotlib",
    "pytest",
    "ruff",
    "scipy",
    "seaborn",
]
